<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="from">发送账户</string>
    <string name="to">对方账户</string>
    <string name="amount">发送数量</string>
    <string name="send">发送</string>
    <string name="receive">接收</string>
    <string name="title_assist_permissions">授予权限</string>
    <string name="label_permission_network">网络访问</string>
    <string name="label_permission_network_desc">用于获取网络数据</string>
    <string name="label_permission_read">读取文件</string>
    <string name="label_permission_read_desc">用于访问头像,私钥数据</string>
    <string name="label_permission_write">写外部文件</string>
    <string name="label_permission_write_desc">用于写临时文件,私钥数据等</string>
    <string name="label_permission_camera">摄像头</string>
    <string name="label_permission_camera_desc">用于二维码扫描</string>
    <string name="label_permission_submit">授权</string>
    <string name="label_permission_process">正在授权</string>
    <string name="label_permission_complete">已全部授权</string>
    <string name="label_permission_ok">授权成功</string>
    <string name="amount_receive">接收%1$s数量</string>
    <string name="receive_people">接收人: %1$s</string>
    <string name="account_name_is_your_address">账户名既转账地址</string>
    <string name="copy">复制</string>
    <string name="account_name_error">账户名异常</string>
    <string name="copy_success">复制成功</string>
    <string name="memo">备注(MEMO)</string>
    <string name="available_coin">可用: %1$s %2$s</string>
    <string name="receive_account_name">填写对方账号</string>
    <string name="amount_to_send">填写%1$s数量</string>
    <string name="optional">选填</string>
    <string name="scan_error">扫描出错</string>
    <string name="scan_success">扫描成功</string>
    <string name="scan_gxb_qrcode">请扫描公信宝二维码</string>
    <string name="loading">加载中</string>
    <string name="click_again_exit">再点击一次退出</string>
    <string name="my">我的</string>
    <string name="chat">聊天</string>
    <string name="total_assets">%1$s</string>
    <string name="label_total_assets">总资产(￥)</string>
    <string name="total_price">≈ ￥ %1$s</string>
    <string name="scan">扫一扫</string>
    <string name="function">功能</string>
    <string name="cancel_scan">取消扫描</string>
    <string name="wallet_already_exist">%1$s 已存在本钱包中</string>
    <string name="contacts">联系人</string>
    <string name="you_have_no_contact">你还没有联系人</string>
    <string name="add_now">立即添加</string>
    <string name="payee_address">收款人地址(账户名)</string>
    <string name="phone">电话</string>
    <string name="full_name">姓名</string>
    <string name="add_contact">添加联系人</string>
    <string name="add">添加</string>
    <string name="save_success">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="address_is_exist">该地址已存在联系人中</string>
    <string name="edit">编辑</string>
    <string name="delete_failure">删除失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete">删除</string>
    <string name="hint">提示</string>
    <string name="are_you_sure_delete">确定要删除吗？</string>
    <string name="cancel">取消</string>
    <string name="edit_contact">编辑联系人</string>
    <string name="save">保存</string>
    <string name="community">社区</string>
    <string name="transaction_record">交易记录</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_card">我的名片</string>
    <string name="system_setting">系统设置</string>
    <string name="help_center">帮助中心</string>
    <string name="about">关于我们</string>
    <string name="gxs_community">GXS 社区</string>
    <string name="quotation">行情</string>
    <string name="transaction_pair">交易对</string>
    <string name="latest_price">最新价</string>
    <string name="rise_and_fall">涨跌幅</string>
    <string name="highest_price_24h">24h最高价</string>
    <string name="minimum_price_24h">24h最低价</string>
    <string name="volume_24h">24h成交量</string>
    <string name="real_time_quotes">实时行情</string>
    <string name="minute_by_minute">分时</string>
    <string name="day_k_line">日K</string>
    <string name="price_trend">价格走势</string>
    <string name="switch_account">切换账户</string>
    <string name="switch_coin">切换币种</string>
    <string name="wallet_manager">钱包管理</string>
    <string name="please_backup">请备份</string>
    <string name="wallet_name">钱包名称</string>
    <string name="create">创建</string>
    <string name="check_wallet_name">正在检查钱包名称</string>
    <string name="this_wallet_name_already_exist">该钱包名称已存在</string>
    <string name="start_request_letter">名称必须字母开头</string>
    <string name="only_letter_number_line">名称只能是数字,字母,横线</string>
    <string name="only_one_dash">短横线只能使用一次</string>
    <string name="end_request_number_or_letter">名称只能以字母或数字结尾</string>
    <string name="wallet_name_not_allow_empty">钱包名不能为空</string>
    <string name="password_not_allow_empty">密码不能为空</string>
    <string name="password_request_more_than_six">密码长度不能小于6位</string>
    <string name="wallet_name_request_more_than_three">钱包名称不能小于3位</string>
    <string name="can_not_connect_to_network">无法连接网络,请检查网络连接</string>
    <string name="being_created_wallet">正在创建钱包</string>
    <string name="create_wallet_success">创建钱包成功</string>
    <string name="backup_tip_title">立即备份你的钱包</string>
    <string name="backup_tip_hint">备份钱包: 导出[助记词]并抄写到安全的地方，千万不要保存到网络上。然后尝试转入,转出小额资产开始使用。</string>
    <string name="backup_wallet">备份钱包</string>
    <string name="input_password_here">在此输入您的密码</string>
    <string name="ok">确定</string>
    <string name="password_error">密码错误</string>
    <string name="memorizing_words">助记词</string>
    <string name="please_unlock_wallet">请解锁钱包</string>
    <string name="unlock_wallet">解锁钱包</string>
    <string name="exporting_memorizing_words">正在导出助记词</string>
    <string name="backup_tip_be_careful">务必按顺序牢记</string>
    <string name="wallet_already_backup">该钱包已备份</string>
    <string name="wallet_detail">钱包详情</string>
    <string name="modify_password">修改密码</string>
    <string name="wallet_assets">钱包资产(%1$s)</string>
    <string name="export_private_key">导出私钥</string>
    <string name="exporting_private_key">正在导出私钥</string>
    <string name="backup_memorizing_words">备份助记词</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="confirm_delete_important">确定要删除吗?(请谨慎决定)</string>
    <string name="private_key_import">私钥导入</string>
    <string name="memorizing_words_import">助记词导入</string>
    <string name="input_memorizing_word_here">请在此处填入助记词(隔空分格)</string>
    <string name="memorizing_words_not_allow_empty">助记词不允许为空</string>
    <string name="import_message_error">导入信息有误,请确认正确填写</string>
    <string name="account_not_exist">账户不存在</string>
    <string name="memorizing_words_count_error">助记词数量错误</string>
    <string name="dialog_private_key_notice">安全警告： 私钥未经加密，导出存在风险，建议使用助记词进行备份。</string>
    <string name="dialog_private_key_placeholder">请解锁钱包</string>
    <string name="connect_exception">连接异常</string>
    <string name="data_exception">数据异常</string>
    <string name="loading_transaction_list">正在加载交易列表</string>
    <string name="transaction_history">交易历史</string>
    <string name="no_transaction_history">没有交易记录</string>
    <string name="transaction_detail">交易详情</string>
    <string name="send_to_this_account">转到以下账户</string>
    <string name="from_this_account">来自以下账户</string>
    <string name="send_account">发送账号</string>
    <string name="receive_account">接收账号</string>
    <string name="fee">手续费</string>
    <string name="operation_time">操作时间</string>
    <string name="txid">TXID</string>
    <string name="choose_enable_coin">选择启用的币种</string>
    <string name="confirm_transaction">确认转账</string>
    <string name="to_account">对方账户</string>
    <string name="currency">币种</string>
    <string name="please_input_password">请输入密码</string>
    <string name="query_fee">正在查询手续费</string>
    <string name="sending">正在发送</string>
    <string name="send_success">发送成功</string>
    <string name="address_not_exists">该地址账户不存在</string>
    <string name="fill_whole">请填写完整</string>
    <string name="to_account_not_allow_empty">对方账户不能为空</string>
    <string name="amount_not_allow_empty">发送数量不能为空</string>
    <string name="amount_format_error">发送数量不符合要求</string>
    <string name="get_quotation">正在获取行情信息</string>
    <string name="language">语言</string>
    <string name="chinese">中文</string>
    <string name="english">英语</string>
    <string name="network_unavailable">网络不可用,请检查网络</string>
    <string name="connect_error">连接异常</string>
    <string name="transfer_cancel">交易取消</string>
    <string name="connecting_data">正在连接数据</string>
    <string name="disconnecting_data">正在断开数据</string>
    <string name="connect_error_please_retry">连接失败,请重试</string>
    <string name="enable_success">启用成功</string>
    <string name="enable_failure">启用失败</string>
    <string name="disable_success">关闭成功</string>
    <string name="disable_failure">关闭失败</string>
    <string name="this_transaction_not_have_memo">该交易没有备注</string>
    <string name="this_transaction_not_have_txid">该交易没有TXID</string>
    <string name="send_asset_type">发送币种</string>
    <string name="parse_error">解析出错</string>
    <string name="input_origin_password">输入原密码</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_failure">修改失败</string>
    <string name="default_wallet">默认钱包</string>
    <string name="default_asset">默认资产</string>
    <string name="not_allow_close_default_asset">不能关闭默认资产</string>
    <string name="more">更多</string>
    <string name="send_balance_not_allow_pay">发送账户余额不足</string>
    <string name="connection_connect_failure">数据连接失败,请检查网络连接</string>
    <string name="gain_failure">获取失败</string>
    <string name="tip">提示</string>
    <string name="confirm_backup_has_been_completed">确定是否已经完成备份?</string>
    <string name="next_time_say">下次再说</string>
</resources>