<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar_backup_tip"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"
        android:elevation="@dimen/len_6"
        app:qmui_topbar_need_separator="false"/>

    <ImageView
        android:layout_width="@dimen/len_60"
        android:layout_height="@dimen/len_60"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/len_20"
        android:src="@drawable/ic_security"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/len_20"
        android:text="@string/backup_tip_title"
        android:textColor="@color/white"
        android:textSize="@dimen/font_22"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/len_20"
        android:layout_marginTop="@dimen/len_20"
        android:lineSpacingExtra="@dimen/len_10"
        android:text="@string/backup_tip_hint"
        android:textColor="@color/white_alpha_176"
        android:textSize="@dimen/font_14"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_20"
            android:text="@string/memorizing_words"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:text="@string/backup_tip_be_careful"
            android:textColor="@color/qmui_config_color_red"
            android:textSize="@dimen/font_12"/>

    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundFrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="@dimen/len_20"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginTop="@dimen/len_6"
        app:qmui_borderColor="@color/colorPrimary"
        app:qmui_borderWidth="1dp"
        app:qmui_radius="@dimen/len_6">

        <TextView
            android:id="@+id/memorizing_words_backup_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/len_10"
            android:textColor="@color/white"
            android:textSize="@dimen/font_24"
            />

        <TextView
            android:id="@+id/unlock_wallet_hint_backup_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/please_unlock_wallet"
            android:textColor="@color/white_alpha_112"
            android:textSize="@dimen/font_22"/>

    </com.qmuiteam.qmui.widget.roundwidget.QMUIRoundFrameLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/backup_wallet_btn_backup_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/len_20"
        android:padding="@dimen/len_16"
        android:text="@string/unlock_wallet"
        app:qmui_radius="@dimen/len_6"/>
</LinearLayout>