<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/len_10"
        android:text="@string/confirm_transaction"
        android:textSize="@dimen/font_18"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/len_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/to_account"/>

        <ImageView
            android:id="@+id/avatar_dialog_transaction_confirm"
            android:layout_width="@dimen/len_28"
            android:layout_height="@dimen/len_28"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/to_dialog_transaction_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:textSize="@dimen/font_18"
            tools:text="in-rush"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/len_10"
        android:background="#eeeeee"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/len_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency"/>


        <TextView
            android:id="@+id/currency_dialog_transaction_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:textSize="@dimen/font_18"
            tools:text="GXS"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/len_10"
        android:background="#eeeeee"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/len_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount"/>


        <TextView
            android:id="@+id/amount_dialog_transaction_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_18"
            android:textStyle="bold"
            tools:text="0.1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/len_10"
        android:background="#eeeeee"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/len_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/memo"/>


        <TextView
            android:id="@+id/memo_dialog_transaction_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:textSize="@dimen/font_18"
            tools:text="123"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/len_10"
        android:background="#eeeeee"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/len_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fee"/>


        <TextView
            android:id="@+id/fee_dialog_transaction_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/len_10"
            android:textSize="@dimen/font_18"
            tools:text="0.2379"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="@dimen/len_10"
        android:background="#eeeeee"
        />

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/confirm_dialog_transaction_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/len_20"
        android:layout_marginEnd="@dimen/len_20"
        android:layout_marginStart="@dimen/len_20"
        android:layout_marginTop="@dimen/len_20"
        android:padding="@dimen/len_10"
        android:text="@string/send"
        android:textColor="@color/white"
        app:qmui_backgroundColor="@color/colorPrimary"
        app:qmui_borderColor="@color/colorPrimary"/>
</LinearLayout>