<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/topbar_add_contact"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height"
        android:elevation="@dimen/len_6"
        app:qmui_topbar_need_separator="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/avatar_add_contact"
            android:layout_width="@dimen/len_80"
            android:layout_height="@dimen/len_80"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/len_28"
            android:src="@mipmap/ic_launcher"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/len_16"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/name_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/full_name"
                android:textColor="@color/white"
                android:textColorLink="@color/colorPrimaryDark"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/len_16"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/address_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/payee_address"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/len_16"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/phone_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/len_16"
            android:textColorHint="@color/white"
            >

            <EditText
                android:id="@+id/memo_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/memo"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@+id/add_btn_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/len_52"
        android:layout_marginEnd="@dimen/len_20"
        android:layout_marginStart="@dimen/len_20"
        android:padding="@dimen/len_20"
        android:textSize="@dimen/font_18"
        android:text="@string/save"/>
</FrameLayout>