<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textAlignment="center"
            app:title="@string/title_assist_permissions"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
            app:titleTextColor="@color/colorPrimary"/>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/len_92"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/len_16">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/len_16"
                android:layout_marginTop="@dimen/len_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_read"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_read_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14"/>

                <ImageView
                    android:id="@+id/im_state_permission_read"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorPrimary"
                    android:visibility="gone"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_alpha_16"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/len_16"
                android:layout_marginTop="@dimen/len_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_write"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_write_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14"/>

                <ImageView
                    android:id="@+id/im_state_permission_write"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorPrimary"
                    android:visibility="gone"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_alpha_16"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/len_16"
                android:layout_marginTop="@dimen/len_16">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_permission_camera"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_16"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/len_20"
                    android:text="@string/label_permission_camera_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/textSecond"
                    android:textSize="@dimen/font_14"/>

                <ImageView
                    android:id="@+id/im_state_permission_camera"
                    android:layout_width="@dimen/len_20"
                    android:layout_height="@dimen/len_20"
                    android:layout_gravity="end|center_vertical"
                    android:background="@null"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_done"
                    android:tint="@color/colorPrimary"
                    android:visibility="gone"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_alpha_16"/>

            <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/len_172"
                android:layout_height="@dimen/len_44"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/len_48"
                android:layout_marginTop="@dimen/len_28"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/label_permission_submit"
                android:textColor="@color/white"
                app:qmui_borderColor="@color/colorPrimary"
                app:qmui_backgroundColor="@color/colorPrimary"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>

